# nixscheduler-engine

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-docker.sh  curl_create_adf_job.sh  curl_create_job.sh
src/: config.rs  main.rs
src/api/: job.rs  mod.rs
src/auth/: handler.rs  mod.rs
src/auth/middleware/: mod.rs  warp_auth.rs
src/auth/oidc/: id_token_verifier.rs  metadata.rs  mod.rs  model.rs
src/azure/: client.rs  mod.rs
src/domain/: mod.rs  model.rs  task_payload.rs
src/engine/: engine.rs  mod.rs  runner.rs
src/job/: mod.rs  model.rs  store.rs
src/scheduler/: engine.rs  mod.rs  wheel.rs
src/shard/: distributed.rs  local.rs  mod.rs
src/task/: adf.rs  handler.rs  mod.rs  print.rs  registry.rs
src/utils/: hash.rs  mod.rs
statics/: index.html  login.html  script.js  styles.css
