[package]
name = "nixscheduler-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
pretty_env_logger = "0.5"
log = "0.4"
async-trait = "0.1"
twox-hash = "2.1"
actix-web = "4"
chrono = "0.4.40"
cron = "0.15"
tokio = {version = "1", features = ["full"]}
sqlx = { version = "0.8" , features = ["sqlite","chrono","runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"