[package]
name = "nixscheduler-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
pretty_env_logger = "0.5"
log = "0.4"
async-trait = "0.1"
twox-hash = "2.1"
actix-web = "4"
actix-files = "0.6"
actix-service = "2"

chrono = "0.4.40"
cron = "0.15"
tokio = {version = "1", features = ["full"]}
sqlx = { version = "0.8" , features = ["sqlite","chrono","runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

reqwest = {version = "0.12" , default-features = false, features = ["rustls-tls","json"]}
#azure
azure_core = {version = "0.23" , default-features = false, features = ["reqwest_rustls"]}
azure_identity = {version = "0.23" , default-features = false, features = ["reqwest_rustls","tokio"]}

#login
jsonwebtoken =  "9.3"
urlencode = "1"
urlencoding = "2.1.3"
time = "0.3.41"
futures-util = "0.3.31"
once_cell = "1.21.3"

#build for release
[profile.release]
opt-level = "z"        # ใช้ "z" เพื่อลดขนาด binary (หรือใช้ "3" เพื่อความเร็วสูงสุด)
lto = true             # เปิด Link Time Optimization
codegen-units = 1      # ลด parallel units เพื่อให้ binary เล็กลง
panic = "abort"        # ลด overhead จาก panic (ใช้ถ้าไม่ต้องการ backtrace)
strip = true           # ตัด symbol debugging ทิ้ง (binary เล็กลงอีก)

# ถ้าต้องการ compile ให้เร็วกว่าเล็กน้อย:
# opt-level = 3